--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -17,5 +17,5 @@ jobs:
           deno-version: 1.18.2
       - uses: denoland/deployctl@v1
         with:
-          project: flowwish
+          project: flowwish.deno.dev
           entrypoint: server.ts
