--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -18,4 +18,4 @@ jobs:
       - uses: denoland/deployctl@v1
         with:
           project: flowwish.deno.dev
-          entrypoint: server.ts
+          entrypoint: ./server.ts
